# agg-sandbox

./: .dockerignore  .env.example  .gitignore  .gitmodules  CODEOWNERS  COMMANDS.md  LXLY.md  Makefile  README.md  bridge-command-implementation-plan.md  bridge-message-failed-analysis.md  claim.json  counter-bridge-example.md  docker-compose.aggnode.yml  docker-compose.multi-l2.yml  docker-compose.yml  env.example  fix_bridge_tests.sh  install-cli.sh
.github/workflows/: cli.yml  contracts.yml  docker-build.yml  docker.yml
agglayer-contracts/: foundry.toml  selectors.txt
agglayer-contracts/lib/: DepositContractBase.sol  DepositContractV2.sol  EmergencyManager.sol  GlobalExitRootLib.sol  LegacyZKEVMStateVariables.sol  PolygonAccessControlUpgradeable.sol  PolygonConstantsBase.sol  PolygonTransparentProxy.sol  PolygonZkEVMGlobalExitRootBaseStorage.sol  TokenWrapped.sol
agglayer-contracts/script/: deployL1.s.sol  deployL2.s.sol  (+1 more)
cli/: CODE_QUALITY_IMPROVEMENT_PLAN.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  RUST_IMPROVEMENTS.md  check-ci.sh  clippy.toml
cli/bridge-service/: .env.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
cli/bridge-service/src/: bridge-client.ts  index.ts  types.ts
cli/bridge-service/src/utils/: config.ts  network-check.ts  validation.ts
cli/src/: api.rs  api_client.rs  batch_processor.rs  config.rs  docker.rs  error.rs  events.rs  lib.rs  logging.rs  logs.rs  main.rs  performance.rs  performance_tests.rs  progress.rs  types.rs  utils.rs  validation.rs
cli/src/commands/: bridge.rs  events.rs  info.rs  logs.rs  mod.rs  restart.rs  show.rs  sponsor_claim.rs  start.rs  status.rs  stop.rs  tests.rs
cli/src/commands/bridge/: bridge_asset.rs  bridge_call.rs  claim_asset.rs  claim_message.rs  common.rs  mod.rs  utilities.rs
cli/src/ui/: components.rs  formatting.rs  message.rs  migration.md  mod.rs  output.rs
cli/tests/: api_benchmarks.rs  error_scenario_tests.rs  performance_tests.rs  reliability_tests.rs
config/: config.toml.container
docs/: advanced-workflows.md  bridge-operations.md  cli-reference.md  configuration.md  deployed-contracts.md  development.md  overview.md  quickstart.md  troubleshooting.md
images/: Dockerfile.anvil  Dockerfile.deploy  Dockerfile.deploy.optimized  entrypoint.sh
scripts/: agg-sandbox.sh  clean-docker-images.sh  deploy-contracts.sh  deploy-with-docker.sh
test/: README.md  run_bridge_tests.sh
(+86 files in other folders)
