[package]
name = "aggsandbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aggsandbox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
colored = "2.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "2.0", features = ["ws", "rustls"] }
hex = "0.4"
lazy_static = "1.4"
chrono = "0.4"
regex = "1.0"
url = "2.0" 