[package]
name = "aggsandbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aggsandbox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
colored = "3.0"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "2.0", features = ["ws", "rustls"] }
hex = "0.4"
chrono = "0.4"
regex = "1.0"
url = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
atty = "0.2"
toml = "0.9"
serde_yaml = "0.9"
lru = "0.16"
dashmap = "6.1"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
tempfile = "3.0"
wiremock = "0.6"
test-case = "3.0"